# humanizer-ai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  keywords.txt.example  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml
api/: inference.py  main.py  models.py
data/: data_processor.py  dataset_builder.py
evaluation/: authenticity_scorer.py  evaluator.py  readability.py  seo_evaluator.py
tests/: test_evaluation.py  test_models.py
training/: config.py  config.yaml  qlora_trainer.py  train.py
ui/: Dockerfile  next.config.ts  package.json
ui/app/: globals.css  layout.tsx  page.tsx
